Fixed text overflow issues

--- a/src/components/ui/BookedVenues/BookedVenues.scss
+++ b/src/components/ui/BookedVenues/BookedVenues.scss
@@ -44,6 +44,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      max-width: 200px;
     }
 
     .image__name__container {
