--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -44,7 +44,7 @@
       transition: rotate ease 0.2s;
 
       &:hover {
-        rotate: -3deg;
+        rotate: -1deg;
       }
     }
 
